[gd_scene load_steps=12 format=2]

[ext_resource path="res://Animated_Sprite_Frames/Player_Knight_spriteframes.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Scripts/Home_Screen_Player_Knight.gd" type="Script" id=2]
[ext_resource path="res://scenes/HEALTH.tscn" type="PackedScene" id=4]
[ext_resource path="res://sounds/hitHurt.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/slash.wav" type="AudioStream" id=6]
[ext_resource path="res://scenes/CoinBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/KeyBar.tscn" type="PackedScene" id=8]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 66.6667, 120.667 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 163.333, 123.333 )

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 3.0

[sub_resource type="Animation" id=4]
length = 0.2

[node name="Player" type="KinematicBody2D"]
position = Vector2( -10, -19 )
scale = Vector2( 0.3, 0.3 )
collision_mask = 8
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 600.0 ]
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 36.6667, -56.6667 )
scale = Vector2( 1.5, 1.5 )
frames = ExtResource( 1 )
animation = "idle"
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 30, -56.6667 )
shape = SubResource( 1 )

[node name="Sword_Hit_Area" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="SwordCollisionShape2D" type="CollisionShape2D" parent="Sword_Hit_Area"]
position = Vector2( 120, -113 )
shape = SubResource( 2 )
disabled = true

[node name="HealthBar" parent="." instance=ExtResource( 4 )]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="SwordSlash" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 3 )
anims/camera_shake = SubResource( 4 )

[node name="CoinBar" parent="." instance=ExtResource( 7 )]

[node name="KeyBar" parent="." instance=ExtResource( 8 )]

[node name="TimerForAttackCombo" type="Timer" parent="."]
one_shot = true

[node name="TimerForDash" type="Timer" parent="."]
wait_time = 0.5

[node name="LeftRayCast2D" type="RayCast2D" parent="."]
position = Vector2( -10, -56 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 2000 )
collision_mask = 2

[node name="RightRayCast2D" type="RayCast2D" parent="."]
position = Vector2( 66.667, -56 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 2000 )
collision_mask = 2
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="body_entered" from="Sword_Hit_Area" to="." method="_on_Sword_Hit_Area_body_entered"]
[connection signal="timeout" from="TimerForAttackCombo" to="." method="_on_TimerForAttackCombo_timeout"]
[connection signal="timeout" from="TimerForDash" to="." method="_on_TimerForDash_timeout"]

[editable path="HealthBar"]

[editable path="CoinBar"]

[editable path="KeyBar"]
